--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/AccountInformationPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/AccountInformationPage.xaml
@@ -78,7 +78,7 @@
         </Grid>
         </ScrollView>
         <StackLayout>
-                <customRenders:CustomButtonRender Style="{StaticResource ButtonStyle}" IsEnabled="{Binding Editbutton}" Text="{i18n:Translate EditUserInformation}" Command="{Binding GoToEditAccountInformationCommand}"></customRenders:CustomButtonRender>
+            <customRenders:CustomButtonRender Style="{StaticResource ButtonStyle}" IsEnabled="{Binding Editbutton}" Text="{i18n:Translate EditUserInformation}" Command="{Binding GoToEditCommand}"></customRenders:CustomButtonRender>
         </StackLayout>
     </StackLayout>
 
