--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ContactListPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ContactListPage.xaml
@@ -4,5 +4,42 @@
              xmlns:i18n="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
              x:Class="DementiaHelper.Pages.ContactListPage"
              >
-    <ListView></ListView>
+
+    <ContentPage.Content>
+
+
+        <StackLayout Padding="5" Orientation="Vertical" VerticalOptions="StartAndExpand" Grid.Row="0" Grid.Column="0">
+            <SearchBar Placeholder="søg" Text="{Binding SearchText}" HeightRequest="50">
+            </SearchBar>
+            <ListView x:Name="ContactListView" ItemsSource="{Binding ContactCollection}">
+                <ListView.Header>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Label Text="{i18n:Translate Name}" Grid.Column="0"></Label>
+                        <Label Text="{i18n:Translate PhoneNumber}" Grid.Column="1"></Label>
+                    </Grid>
+                </ListView.Header>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid x:Name="Item">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"></ColumnDefinition>
+                                    <ColumnDefinition Width="*"></ColumnDefinition>
+                                    <ColumnDefinition Width="*"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <Label VerticalTextAlignment="Center" Text="{Binding Name}" Grid.Column="0"></Label>
+                                <Label VerticalTextAlignment="Center"  Text="{Binding Phone}" Grid.Column="1"></Label>
+                                <Button BindingContext="{Binding Source={x:Reference ContactListView},Path=BindingContext}" Command="{Binding CallContactCommand}" CommandParameter="{Binding Source={x:Reference Item}, Path=BindingContext}" Text="Call" Grid.Column="2"></Button>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
