--- a/DementiaHelper/DementiaHelper/DementiaHelper/App.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/App.xaml
@@ -14,6 +14,9 @@
                 <Setter Property="TextColor" Value="Black" />
                 <Setter Property="Margin" Value="10,0,10,5"/>
             </Style>
+            <Style x:Key="ListLabelStyleTablet" TargetType="Label">
+                <Setter Property="FontSize" Value="22"></Setter>
+            </Style>
 
         </ResourceDictionary>
     </Application.Resources>
