--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/LoginPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/LoginPage.xaml
@@ -29,8 +29,8 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.Content>
-        <OnIdiom x:TypeArguments="View">
-            <OnIdiom.Phone>
+        <!--<OnIdiom x:TypeArguments="View">
+            <OnIdiom.Phone>-->
                 <StackLayout  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                     <StackLayout x:Name="outerStack" VerticalOptions="Start" >
                         <StackLayout Orientation="Vertical" VerticalOptions="Start" >
@@ -58,8 +58,8 @@
                         </Grid>
                     </StackLayout>
                 </StackLayout>
-            </OnIdiom.Phone>
-            <OnIdiom.Tablet>
+            <!--</OnIdiom.Phone>-->
+            <!--<OnIdiom.Tablet>
                 <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"></ColumnDefinition>
@@ -67,7 +67,7 @@
                     </Grid.ColumnDefinitions>
                     <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Grid.Column="1">
                         <StackLayout  Orientation="Vertical" VerticalOptions="Start">
-                            <!-- top controls -->
+                            --><!-- top controls --><!--
                         </StackLayout>
                         <StackLayout VerticalOptions="CenterAndExpand">
                             <Entry BackgroundColor="#00A8C8" Text="{Binding Email}" Placeholder="{i18n:Translate Email}" HorizontalOptions="CenterAndExpand" />
@@ -92,8 +92,8 @@
                         </StackLayout>
                     </StackLayout>
                 </Grid>
-            </OnIdiom.Tablet>
-        </OnIdiom>
+            </OnIdiom.Tablet>-->
+        <!--</OnIdiom>-->
     </ContentPage.Content>
 </ContentPage>
 
