--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CalenderPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CalenderPage.xaml
@@ -10,12 +10,11 @@
 
 
     <ContentPage  Title="Day" >
-        <OnIdiom x:TypeArguments="View">
-            <OnIdiom.Phone>
-                <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" >
-                    <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1"  >
-                        <ScrollView Orientation="Vertical" VerticalOptions="FillAndExpand" >
-                            <schedule:SfSchedule
+
+        <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" >
+            <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1"  >
+                <ScrollView Orientation="Vertical" VerticalOptions="FillAndExpand" >
+                    <schedule:SfSchedule
                          BindingContext="{Binding BindingContext,Source={x:Reference CalenderTabPage}}"
                          DataSource="{Binding Appointments}"
                          x:Name="DaySchedule"
@@ -23,67 +22,31 @@
                          ScheduleView="DayView" 
                          HorizontalOptions="FillAndExpand"
                          VerticalOptions="FillAndExpand"  >
-                                <schedule:SfSchedule.DayViewSettings>
-                                    <schedule:DayViewSettings >
-                                        <schedule:DayViewSettings.DayLabelSettings>
-                                            <schedule:DayLabelSettings TimeFormat="HH" />
-                                        </schedule:DayViewSettings.DayLabelSettings>
-                                    </schedule:DayViewSettings>
-                                </schedule:SfSchedule.DayViewSettings>
-                            </schedule:SfSchedule>
-                        </ScrollView>
-                    </StackLayout>
+                        <schedule:SfSchedule.DayViewSettings>
+                            <schedule:DayViewSettings >
+                                <schedule:DayViewSettings.DayLabelSettings>
+                                    <schedule:DayLabelSettings TimeFormat="HH" />
+                                </schedule:DayViewSettings.DayLabelSettings>
+                            </schedule:DayViewSettings>
+                        </schedule:SfSchedule.DayViewSettings>
+                    </schedule:SfSchedule>
+                </ScrollView>
+            </StackLayout>
 
 
-                    <Image Source="ic_add_circle_black_48dp.png"
+            <Image Source="ic_add_circle_black_48dp.png"
               VerticalOptions="FillAndExpand"
               HorizontalOptions="FillAndExpand"
-              AbsoluteLayout.LayoutBounds="1,.99, 65, 65"
               AbsoluteLayout.LayoutFlags="PositionProportional" >
-                        <Image.GestureRecognizers>
-                            <TapGestureRecognizer
+                <Image.AbsoluteLayout.LayoutBounds>
+                    <OnIdiom x:TypeArguments="Rectangle" Phone="1,.99, 65, 65" Tablet="1,.99, 130, 130" />
+                </Image.AbsoluteLayout.LayoutBounds>
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer
               Command="{Binding AddAppointmentCommand}"/>
-                        </Image.GestureRecognizers>
-                    </Image>
-                </AbsoluteLayout>
-            </OnIdiom.Phone>
-            <OnIdiom.Tablet>
-                <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" >
-                    <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1"  >
-                        <ScrollView Orientation="Vertical" VerticalOptions="FillAndExpand" >
-                            <schedule:SfSchedule
-                         BindingContext="{Binding BindingContext,Source={x:Reference CalenderTabPage}}"
-                         DataSource="{Binding Appointments}"
-                         x:Name="DayScheduleTablet"
-                        Locale="da-DK"
-                         ScheduleView="DayView" 
-                         HorizontalOptions="FillAndExpand"
-                         VerticalOptions="FillAndExpand"  >
-                                <schedule:SfSchedule.DayViewSettings>
-                                    <schedule:DayViewSettings >
-                                        <schedule:DayViewSettings.DayLabelSettings>
-                                            <schedule:DayLabelSettings TimeFormat="HH" />
-                                        </schedule:DayViewSettings.DayLabelSettings>
-                                    </schedule:DayViewSettings>
-                                </schedule:SfSchedule.DayViewSettings>
-                            </schedule:SfSchedule>
-                        </ScrollView>
-                    </StackLayout>
-
-
-                    <Image Source="ic_add_circle_black_48dp.png"
-              VerticalOptions="FillAndExpand"
-              HorizontalOptions="FillAndExpand"
-              AbsoluteLayout.LayoutBounds="1,.99, 130, 130"
-              AbsoluteLayout.LayoutFlags="PositionProportional" >
-                        <Image.GestureRecognizers>
-                            <TapGestureRecognizer
-              Command="{Binding AddAppointmentCommand}"/>
-                        </Image.GestureRecognizers>
-                    </Image>
-                </AbsoluteLayout>
-            </OnIdiom.Tablet>
-        </OnIdiom>
+                </Image.GestureRecognizers>
+            </Image>
+        </AbsoluteLayout>
     </ContentPage>
 
 
@@ -146,8 +109,10 @@
             <Image Source="ic_add_circle_black_48dp.png"
               VerticalOptions="FillAndExpand"
               HorizontalOptions="FillAndExpand"
-              AbsoluteLayout.LayoutBounds="1,.99, 130, 130"
               AbsoluteLayout.LayoutFlags="PositionProportional" >
+                <Image.AbsoluteLayout.LayoutBounds>
+                    <OnIdiom x:TypeArguments="Rectangle" Phone="1,.99, 65, 65" Tablet="1,.99, 130, 130" />
+                </Image.AbsoluteLayout.LayoutBounds>
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer
               Command="{Binding AddAppointmentCommand}"/>
