--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ChatPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ChatPage.xaml
@@ -2,9 +2,10 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:model="clr-namespace:DementiaHelper.Model;assembly=DementiaHelper"
-             xmlns:extensions="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
+             xmlns:i18n="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
              xmlns:customRenders="clr-namespace:DementiaHelper.Renders.CustomControlRenders;assembly=DementiaHelper"
              x:Class="DementiaHelper.Pages.ChatPage"
+             Title="{i18n:Translate ChatTitle}"
              BackgroundColor="White"
              NavigationPage.HasNavigationBar="True">
 
@@ -37,10 +38,10 @@
         </ListView>
 
         <StackLayout BackgroundColor="#0099cc" Padding="1">
-            <Entry Text="{Binding ChatMessage.Message}" BackgroundColor="White" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"  Placeholder="Message"></Entry>
+            <Entry Keyboard="Chat" Text="{Binding ChatMessage.Message}" BackgroundColor="White" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"  Placeholder="Message"></Entry>
         </StackLayout>
 
-        <customRenders:CustomButtonRender  Style="{StaticResource ButtonStyle}" Text="{extensions:Translate SendMessage}" Command="{Binding SendMessageCommand}"/>
+        <customRenders:CustomButtonRender  Style="{StaticResource ButtonStyle}" Text="{i18n:Translate SendMessage}" Command="{Binding SendMessageCommand}"/>
 
     </StackLayout>
     
