--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/EditAccountInformationPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/EditAccountInformationPage.xaml
@@ -56,11 +56,11 @@
                 <!--This is used as a seperator line in the grid-->
                 <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="4"/>
 
-                <Label Text="{i18n:Translate Email}" VerticalOptions="Center" Grid.Row="7" Grid.Column="1"></Label>
-                <Entry Text="{Binding UpdatedUser.Email}" Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
+                <Label Text="{i18n:Translate Email}"  VerticalOptions="Center" Grid.Row="7" Grid.Column="1"></Label>
+                <Entry Text="{Binding UpdatedUser.Email}"  Keyboard="Email" Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
 
                 <Label Text="{i18n:Translate Phone}" VerticalOptions="Center" Grid.Row="8" Grid.Column="1"></Label>
-                <Entry Text="{Binding UpdatedUser.Phone}" Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
+                <Entry Text="{Binding UpdatedUser.Phone}" Keyboard="Numeric" Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
 
 
 
