--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/NotePage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/NotePage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:customRenders="clr-namespace:DementiaHelper.Renders.CustomControlRenders;assembly=DementiaHelper"
              xmlns:i18n="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
-             x:Class="DementiaHelper.Pages.NotePage">
+             x:Class="DementiaHelper.Pages.NotePage"
+             Title="{i18n:Translate NoteTitle}">
 
 
 
